[package]
name = "gossip-relay-picker"
version = "0.2.0-unstable"
description = "A relay picker for nostr, used by gossip"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/gossip-relay-picker"
homepage = "https://github.com/mikedilger/gossip-relay-picker"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
dashmap = "5.4"
nostr-types = { git = "https://github.com/cryptoquick/nostr-types", rev = "43d5c8b910409b5fbc1c15d103b2c8ffc4c5338a" }
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
